Change game redirect URL to 'mundogame/game3.html'
Updated redirect URL for the game page.

--- a/car3.html
+++ b/car3.html
@@ -166,7 +166,7 @@
 
                     // Redireciona para a página do jogo após 15 segundos de espera
                     setTimeout(() => {
-                        window.location.href = 'game3.html';
+                        window.location.href = 'mundogame/game3.html';
                     }, 3000); // 3000 milissegundos = 3 segundos
                 }
                 
